--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+.idea/
+venv/
+todo.info
+old_autoroom.py
+_RedBot_DATA/
+
 ### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
